--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <jstl-version>1.2</jstl-version>
     <taglibs-version>1.1.2</taglibs-version>
     <freemarker-version>2.3.23</freemarker-version>
+
   </properties>
 
   <!-- 阿里云maven仓库 -->
@@ -66,7 +67,6 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit-version}</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -290,11 +290,43 @@
       <version>4.1.6.Final</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.hive/hive-exec -->
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-exec</artifactId>
+      <version>1.2.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-client -->
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-client</artifactId>
+      <version>0.99.2</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-server -->
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-server</artifactId>
+      <version>0.99.2</version>
+    </dependency>
+
+
+
+
+
+
+
+
+
+
 
 
   </dependencies>
 
+
+
   <build>
+
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -325,6 +357,33 @@
           <uriEncoding>UTF-8</uriEncoding>
         </configuration>
       </plugin>
+
+      <!--打成可运行jar包-->
+      <!--<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>com.demo.mapreduce.wordcount.WordCountDriver</mainClass>
+                </transformer>
+              </transformers>
+              <artifactSet>
+              </artifactSet>
+              &lt;!&ndash;<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>&ndash;&gt;
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>-->
+
+
     </plugins>
     <resources>
       <resource>
